[package]
name = "pmd_flow"
version = "0.1.0"
authors = ["marius851000 <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
pmd_sir0 = "1.1.0"
